###### TWE 5.4-1 RELEASED ######
2016-07-02 Sasa Bojanic <sasaboy@together.at>
   # Now also calculating references to variables in the Lane's performer element

2016-06-29 Sasa Bojanic <sasaboy@together.at>
   # Improved validation for XPath tool agent

2016-06-10 Sasa Bojanic <sasaboy@together.at>
   # Now explicitly using XALAN for transformations (problem with saxon and namespaces)

2016-05-17 Sasa Bojanic <sasaboy@together.at>
   # Fixed: when action to insert missing start/end events is executed, undo was not working properly any more. This issue was introduced in version 5.1-1.

2016-05-16 Sasa Bojanic <sasaboy@together.at>
   # Corrected marking of validation errors/warning in the tree-view
   # Shark mode: Added support for PowerShellToolAgent

2016-04-26 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: fix for displaying WorkflowProcess panel for the external package's workflow process

2016-04-25 Sasa Bojanic <sasaboy@together.at>
   # New sub-section added to manual: "How to show transition conditions vs. names in the graph"

2016-04-21 Sasa Bojanic <sasaboy@together.at>
   # Implemented Graph print action

2016-04-19 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by setting XPDL to read-only and initializing caches when saving XPDL (to have faster validation)
   # Improved performance by doing delta design-time validation (only for the current process) whenever possible - the cases 
     when Id of element is not changed and there was no insertion/removal/reposition of global-validation element

   
2016-04-18 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by setting XPDL to read-only and initializing caches before validation
   # Improved performance by not design-time validating XMLAttribute elements which are not required and don't have default value (e.g. Name attribute)