@@ -41,6 +41,8 @@ LabelGenerator.Settings=org.enhydra.jawe.shark.SharkLabelGeneratorSettings
 
 XPDLUtils.Class = org.enhydra.jawe.shark.business.SharkXPDLUtils
 
+DisplayNameGenerator.Class = org.enhydra.jawe.shark.SharkDisplayNameGenerator
+
 TooltipGenerator.Class = org.enhydra.jawe.shark.SharkTooltipGenerator
 
 #DefaultTransientPackages=
